# scenarios

./: .gitignore  .project  README.md  analyse.pl  howto_setup_for_simulations.pptx  pyproject.toml  usepe_e3.scn
OSD/: settings_OSD_3.cfg  settings_OSD_3_clean.cfg
analysis/: Analyse.ipynb  exercise_1_results.xlsx  exercise_2_results.xlsx  exercise_3_results.xlsx  exercise_3_statistics.xlsx  exercise_4_results.xlsx
exercise_1/: exercise_1_graph_creation.ipynb  settings_OSD_3.cfg  settings_delivery_background_high_0_ref.cfg  settings_delivery_background_high_0_sol.cfg  settings_delivery_background_low_0.cfg  settings_delivery_background_low_0_ref.cfg  settings_delivery_background_medium_0_ref.cfg  settings_delivery_background_medium_0_sol.cfg
exercise_2/: exe_2_graph_creation.ipynb  settings_emergency_surveillance_background_0_ref.cfg  settings_emergency_surveillance_background_0_sol.cfg  settings_emergency_surveillance_background_high_0_ref.cfg  settings_emergency_surveillance_background_high_0_sol.cfg  settings_emergency_surveillance_background_medium_0_ref.cfg  settings_emergency_surveillance_background_medium_0_sol.cfg  settings_exe_2_ref.cfg
exercise_3/: eurowings_ref.scn  exe_3_graph_creation.ipynb  exe_3_setup_d2c2.ipynb  exe_3_setup_ref.ipynb  flight_plan_csv_file_generator.ipynb  settings_exe_3_d2c2.cfg  settings_exe_3_ref.cfg  surveillance_op5.scn  turkish_ref.scn
exercise_4/: exe_4_graph_creation.ipynb  exe_4_setup_d2c2.ipynb  exe_4_setup_ref.ipynb  flight_plan_csv_file_generator.ipynb  settings_exe_4_d2c2.cfg  settings_exe_4_ref.cfg
(+238 files in other folders)
